# hyprstream

./: TOOL_CALLING.md
crates/git2db/src/: registry.rs
crates/hyprstream/: Cargo.toml
crates/hyprstream-rpc-derive/src/codegen/: client.rs  handler.rs  metadata.rs
crates/hyprstream/schema/: events.capnp  inference.capnp  model.capnp  registry.capnp
crates/hyprstream/src/api/: mod.rs  openai_compat.rs  tools.rs
crates/hyprstream/src/cli/: git_handlers.rs  training_handlers.rs
crates/hyprstream/src/config/: mod.rs
crates/hyprstream/src/inference/: client.rs  local.rs  request.rs
crates/hyprstream/src/runtime/: mod.rs  model_config.rs  template_engine.rs  torch_engine.rs
crates/hyprstream/src/server/routes/: openai.rs
crates/hyprstream/src/services/: editing.rs  inference.rs  mcp_service.rs  mod.rs  model.rs  registry.rs
crates/hyprstream/src/training/: data_loader.rs
