[package]
name = "hyprstream"
version = "0.2.0"
edition.workspace = true
description = "Agentic Infrastructure"
documentation = "https://docs.rs/hyprstream"
readme = "README.md"
license.workspace = true
exclude = [
    "**/*.pyc",
    "**/__pycache__/",
]
repository.workspace = true

[lib]
name = "hyprstream_core"
path = "src/lib.rs"
doctest = true

[[bin]]
name = "hyprstream"
path = "src/bin/main.rs"

[dependencies]
# Arrow and DataFusion dependencies removed - focused on ML inference only
bytes.workspace = true
futures.workspace = true
tokio.workspace = true
tonic.workspace = true
async-trait.workspace = true
tokio-util.workspace = true
serde.workspace = true
serde_json.workspace = true
json-threat-protection.workspace = true
nix.workspace = true
users.workspace = true
rlimit.workspace = true
tracing-subscriber.workspace = true

# ADBC dependencies removed - focused on ML inference only

# Configuration
config.workspace = true
toml.workspace = true
serde_yaml.workspace = true
git2.workspace = true  # Still needed by git2db internally
git2db = { path = "../git2db", features = ["overlayfs"] }  # High-level git library with overlayfs
hyprstream-rpc = { path = "../hyprstream-rpc" }  # RPC infrastructure (Cap'n Proto + ZMQ)
hyprstream-rpc-derive = { path = "../hyprstream-rpc-derive" }  # RPC code generation proc macros
hyprstream-flight = { path = "../hyprstream-flight" }  # Flight SQL server and client
hyprstream-metrics = { path = "../hyprstream-metrics" }  # Metrics storage (for RegistryClient trait)
hyprstream-workers = { path = "../hyprstream-workers" }  # Worker runtime (Kata containers)
inventory.workspace = true  # Service factory registration
gittorrent = { workspace = true, optional = true }  # P2P transport
clap.workspace = true
tracing.workspace = true
tracing-opentelemetry = { workspace = true, optional = true }
opentelemetry = { workspace = true, optional = true }
opentelemetry_sdk = { workspace = true, optional = true }
opentelemetry-otlp = { workspace = true, optional = true }
opentelemetry-semantic-conventions = { workspace = true, optional = true }
opentelemetry-stdout = { workspace = true, optional = true }
parking_lot.workspace = true
num_cpus.workspace = true
once_cell.workspace = true  # For global GitService singleton
dirs = "5"  # User directory paths for CLI

rmcp = { version = "0.14", features = ["server", "macros", "transport-io", "transport-streamable-http-server"] }
http = "1"  # HTTP types (request::Parts) for MCP identity extraction
schemars = "1.2"

tracing-log.workspace = true
tracing-appender.workspace = true
bincode.workspace = true
tokio-stream.workspace = true
hex.workspace = true
chrono.workspace = true
async-stream.workspace = true
anyhow.workspace = true
sha2.workspace = true  # SHA256 validation for LFS files
hmac.workspace = true  # HMAC for authenticated stream chunks
daemonize.workspace = true
prost.workspace = true

# HTTP socket activation (systemd)
listenfd = { version = "1.0", optional = true }

# ML dependencies
thiserror.workspace = true
rayon.workspace = true  # Parallel processing for tensor operations
memmap2.workspace = true
rand.workspace = true
tch = { git = "https://github.com/hyprstream/tch-rs", branch = "hip" }
bitsandbytes-sys = { path = "../bitsandbytes-sys", optional = true }  # KV cache quantization

# Candle ML Framework - REMOVED: Fully migrated to Tch (PyTorch Rust bindings)
# candle-core = "0.9.1"
# candle-nn = "0.9.1"
# candle-transformers = "0.9.1"
# candle-examples = "0.9.1"
tokenizers.workspace = true
safetensors.workspace = true
image.workspace = true
regex.workspace = true
minijinja.workspace = true

# Runtime Integration Dependencies
# llama-cpp-2 = "0.1.67"          # REMOVED: Replaced by Tch (PyTorch) inference
# mistralrs dependencies commented out during Candle migration
# mistralrs = { path = "../mistral.rs/mistralrs" }
# mistralrs-core = { path = "../mistral.rs/mistralrs-core" }
# hf-hub removed - using Git for all model downloads

uuid.workspace = true
automerge = "0.5"  # CRDT collaborative editing
tmq.workspace = true  # Tokio ZeroMQ bindings for event bus
zmq.workspace = true  # Underlying libzmq bindings
capnp.workspace = true  # Cap'n Proto runtime
capnp-futures.workspace = true  # Cap'n Proto async support
glob.workspace = true
walkdir.workspace = true
reqwest.workspace = true
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
libc = "0.2"  # For system calls in overlay2 driver
reflink-copy = "0.1"  # COW file copying (reflink when available)

[target.'cfg(target_os = "linux")'.dependencies]
pathrs = "0.2"  # Kernel-enforced path containment via openat2(RESOLVE_IN_ROOT)
lru.workspace = true  # LRU cache for model caching and Git repository handles
dashmap.workspace = true  # Concurrent HashMap for thread-safe repository caching
bitflags = "2.4"  # Capability flags for archetype detection
casbin = "2"  # Access control library for RBAC/ABAC
indicatif.workspace = true              # Progress bars
fastrand.workspace = true                # Fast random number generation for sampling
rand.workspace = true                    # Cryptographic random for OAuth auth codes
xdg.workspace = true                     # XDG Base Directory specification
blake3.workspace = true                  # Fast cryptographic hashing for checksums
tempfile.workspace = true                # Temporary files for model conversion
base64.workspace = true                  # JWT token encoding
ed25519-dalek.workspace = true           # JWT Ed25519 signatures
curve25519-dalek.workspace = true        # Ristretto255 DH for stream authentication
hkdf.workspace = true                    # HKDF key derivation
subtle.workspace = true                  # Constant-time operations

# HTTP API dependencies
axum.workspace = true
tower-http.workspace = true
url.workspace = true
urlencoding.workspace = true
half.workspace = true
shellexpand.workspace = true

[features]
default = ["gittorrent", "xet", "systemd", "otel"]
cuda = []
bnb = ["dep:bitsandbytes-sys"]  # Enable bitsandbytes KV cache quantization (requires compatible ROCm/CUDA)
xet = ["git2db/xet-storage"]  # Enable XET large file storage
otel = ["dep:tracing-opentelemetry", "dep:opentelemetry", "dep:opentelemetry_sdk", "dep:opentelemetry-otlp", "dep:opentelemetry-semantic-conventions", "dep:opentelemetry-stdout"]
gittorrent = ["dep:gittorrent", "git2db/gittorrent-transport"]  # Enable P2P model sharing via gittorrent transport
download-libtorch = ["tch/download-libtorch"]
overlayfs = ["git2db/overlayfs"]  # Enable overlayfs-backed worktrees (delegated to git2db)
systemd = ["hyprstream-rpc/systemd", "hyprstream-workers/systemd", "dep:listenfd"]  # Systemd integration (socket activation, service units)
experimental = []  # EXPERIMENTAL: Enable git write operations (commit/push/merge - need service layer implementation)

[build-dependencies]
capnpc.workspace = true  # Cap'n Proto schema compiler
capnp.workspace = true   # Cap'n Proto runtime for schema parsing
serde_json.workspace = true  # JSON output for metadata
hyprstream-rpc-build.workspace = true  # Shared annotation extraction

[dev-dependencies]
criterion.workspace = true
tempfile.workspace = true
tokio-stream.workspace = true

[lints]
workspace = true
